2014-05-20  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_api.php
	  include/functions_db.php
	  include/functions_incidents.php: Fixed API:
	function 'get_stats'.

2014-05-15  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/languages/cs.mo
	  include/languages/cs.po
	  include/languages/de.mo
	  include/languages/de.po
	  include/languages/en_GB.mo
	  include/languages/en_GB.po
	  include/languages/es.mo
	  include/languages/es.po
	  include/languages/fr.po
	  include/languages/fr.mo
	  include/languages/pl.po
	  include/languages/pl.mo
	  include/languages/ru.po
	  include/languages/ru.mo
	  include/languages/zh_CN.mo
	  include/languages/zh_CN.po
	  include/languages/zh_TN.mo
	  include/languages/zh_TN.po
	  include/languages/index.pot: Updated translations.

2014-05-15  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/integria_cron.php: Fixed address
	validation.

2014-05-14  Sancho Lerena <slerena@artica.es>

	* operation/newsletter/address_definition.php: fixed typo for
	email search.

2014-05-14  Vanessa Gil <vanessa.gil@artica.es>
	
	* extras/mr/9.sql
	  include/config_process.php
	  operation/leads/lead_detail.php: Fixed bugs.

2014-05-14  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/grupos/configurar_grupo.php: Show
	inventory name.

2014-05-14  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  operation/leads/lead_detail.php
	  operation/leads/lead_pipeline.php
	  operation/newsletter/address_definition.php
	  operation/newsletter/newsletter_definition.php: Improvements
	in leads. Added 'executive overview' and 'alarm'.

	* extras/mr/9.sql: Added file.

2014-05-13  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/setup/setup_mail.php
	  include/functions_config.php
	  include/integria_cron.php
	  include/smtp_validate_email.php
	  operation/newsletter/address_definition.php
	  operation/newsletter/newsletter_definition.php: Improvements
	in newsletters. Changed email address validation.
