@@ -1,3 +1,8 @@
+2014-05-27  Vanessa Gil <vanessa.gil@artica.es>
+	
+	* operation/newsletter/issue_creation.php:
+	Fixed problem with newsletter.
+
 2014-05-20  Vanessa Gil <vanessa.gil@artica.es>
 	
 	* include/functions_api.php
